# xai-gpt-agent-toolkit

./: LICENSE  README.md  README.md full ai  agent_components.py  babyagi.xircuits  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: run-workflow-tests.yml
examples/: babyagi.xircuits
tests/: babyagi_test.xircuits
